@@ -73,6 +73,7 @@ import mobac.mapsources.impl.RegionalMapSources.NearMap;
 import mobac.mapsources.impl.RegionalMapSources.OutdooractiveAustria;
 import mobac.mapsources.impl.RegionalMapSources.OutdooractiveGermany;
 import mobac.mapsources.impl.RegionalMapSources.OutdooractiveSouthTyrol;
+import mobac.mapsources.impl.RegionalMapSources.Sigpac;
 import mobac.mapsources.impl.RegionalMapSources.StatkartSjoHovedkart2;
 import mobac.mapsources.impl.RegionalMapSources.StatkartTopo2;
 import mobac.mapsources.impl.RegionalMapSources.StatkartToporaster2;
@@ -112,7 +113,7 @@ public class DefaultMapSourcesManager extends MapSourcesManager {
 				new StatkartTopo2(), new StatkartToporaster2(), new StatkartSjoHovedkart2(), new EniroComMap(),
 				new EniroComAerial(), new EniroComNautical(), new MapplusCh(), new YandexMap(), new YandexSat(),
 				new Navitel(), new MicrosoftOrdnanceSurveyExplorer(), new AeroChartsVFR(), new AeroChartsIFR(),
-				new AeroChartsIFRH() };
+				new AeroChartsIFRH(), new Sigpac() };
 	}
 
 	public static void initialize() {
