@@ -15,6 +15,7 @@
  + New map source: Microsoft Maps with hill shade
  ~ Custom tile settings now possible with SportsTracker
  + New atlas format: Osmdroid ZIP
+ + New map source: SIGPAC Mercator (Spain only) - patch by susinho
 
  1.8 beta 2: (2010-09-13)
  + AlpineQuestMap atlas creator updated (patch by Camille) 
